[package]
name = "nexus-comments"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus side-margin comments subsystem (BL-050): persistent threads anchored to stable block ids"

[dependencies]
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex-lite = { workspace = true }
ts-rs = { workspace = true, optional = true, features = ["chrono-impl", "uuid-impl"] }
schemars = { workspace = true, optional = true, features = ["chrono04", "uuid1"] }

[features]
# Audit-2026-05-01 P1-3 (#113) — emit JSON Schema + TypeScript bindings
# for IPC arg/reply types. Off by default so normal builds don't pull
# ts-rs / schemars.
ts-export = ["dep:ts-rs", "dep:schemars"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
