[package]
name = "nexus-context"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Typed context construction pipeline for Nexus AI sessions"

[dependencies]
nexus-memory = { path = "../nexus-memory" }
nexus-plugin-api = { path = "../nexus-plugin-api" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
