[package]
name        = "nexus-crdt"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Operation-based CRDT layer for collaborative editing (BL-074, PRD-08 §8)"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio       = { workspace = true, features = ["sync", "rt", "macros"] }
nexus-editor = { path = "../nexus-editor" }
nexus-kernel = { path = "../nexus-kernel" }

[dev-dependencies]
nexus-formats = { path = "../nexus-formats" }
tokio        = { workspace = true, features = ["sync", "rt", "macros", "time", "test-util"] }
