[package]
name = "nexus-dap"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus DAP host — spawns external Debug Adapter Protocol adapters and bridges them to the kernel IPC bus"

[dependencies]
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true, optional = true, features = ["serde-json-impl"] }

[features]
# Mirror nexus-lsp / nexus-mcp: TS bindings + JSON Schema export gated
# behind a feature so the production build doesn't pull ts-rs.
ts-export = ["dep:ts-rs"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
