[package]
name = "nexus-database"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus database engine: rich property types, query engine, formula language, relations, import/export"

[dependencies]
nexus-storage = { path = "../nexus-storage" }
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex-lite = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
csv = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
