[package]
name = "nexus-database"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus database support library: property types, validation, formula language, CSV import/export. No SQL — SQL-backed query/schema lives in nexus-storage::bases."

[dependencies]
nexus-types = { path = "../nexus-types" }
nexus-plugins = { path = "../nexus-plugins" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex-lite = { workspace = true }
tracing = { workspace = true }
csv = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
