[package]
name = "nexus-database"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus database support library: property types, validation, formula language, CSV import/export. No SQL — SQL-backed query/schema lives in nexus-storage::bases."

[dependencies]
nexus-types = { path = "../nexus-types" }
nexus-plugins = { path = "../nexus-plugins" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex-lite = { workspace = true }
tracing = { workspace = true }
csv = { workspace = true }
ts-rs = { workspace = true, optional = true, features = ["serde-json-impl"] }
schemars = { workspace = true, optional = true }

[features]
# Audit-2026-05-01 P1-3 (#113) — emit JSON Schema + TypeScript bindings
# for IPC arg/reply types. Off by default. Args/responses that reference
# `nexus_types::bases::BaseRecord` are out of scope here because
# BaseRecord uses `#[serde(flatten)]` for forward-compat record fields,
# which is incompatible with the P0-2 `deny_unknown_fields` gate.
ts-export = ["dep:ts-rs", "dep:schemars"]

[dev-dependencies]
tempfile = { workspace = true }
