[package]
name        = "nexus-formats"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
publish.workspace   = true
description = "Nexus file-format library: markdown, canvas, bases, config parsing (PRD 06)"

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yml  = { workspace = true }
toml       = { workspace = true }
comrak     = { workspace = true }
sha2       = { workspace = true }
regex-lite = { workspace = true }
chrono     = { workspace = true }
csv        = { workspace = true }
zip        = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
