[package]
name = "nexus-git"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus git integration: read-only status, diff, blame, log via libgit2"

[dependencies]
git2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }
nexus-types = { path = "../nexus-types" }
ts-rs = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[features]
# Audit-2026-05-01 P1-3 (#113) — emit JSON Schema + TypeScript bindings
# for the wire-mirror IPC types in `ipc.rs`. Off by default.
ts-export = ["dep:ts-rs", "dep:schemars"]

[dev-dependencies]
tempfile = { workspace = true }
