[package]
name = "nexus-gpui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus — gpui desktop shell (ADR 0026, Phase 0 spike)"

[[bin]]
name = "nexus-gpui"
path = "src/main.rs"

[dependencies]
nexus-bootstrap  = { path = "../nexus-bootstrap" }
nexus-kernel     = { path = "../nexus-kernel" }
nexus-types      = { path = "../nexus-types" }
nexus-terminal   = { path = "../nexus-terminal" }

gpui          = { workspace = true }
comrak        = { workspace = true }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["x11", "font-kit"] }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
clap       = { workspace = true }
