[package]
name = "nexus-gpui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus — gpui desktop shell (ADR 0026, Phase 0 spike)"

[[bin]]
name = "nexus-gpui"
path = "src/main.rs"

[dependencies]
nexus-bootstrap  = { path = "../nexus-bootstrap" }
nexus-kernel     = { path = "../nexus-kernel" }
nexus-types      = { path = "../nexus-types" }
nexus-terminal   = { path = "../nexus-terminal" }

gpui          = { workspace = true }
comrak        = { workspace = true }
# Same rev as the workspace `gpui` pin.  The x11 feature is a no-op on
# non-Linux platforms because gpui_linux is a platform-conditional dep.
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", rev = "20f86a729fc5511515c21a3e9b4fcc9adc7e2eaf", features = ["x11", "font-kit"] }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
clap       = { workspace = true }

# Explicit pin so Cargo's macOS resolver picks 0.10.0 (gpui's exact constraint)
# rather than 0.10.1, which would conflict with gpui's =0.10.0 requirement.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "=0.10.0"
