[package]
name = "nexus-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus kernel: event bus, plugin lifecycle, capability system"

[dependencies]
nexus-types = { path = "../nexus-types" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
