[package]
name = "nexus-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus kernel: event bus, plugin lifecycle, capability system"

[dependencies]
nexus-plugin-api = { workspace = true }
nexus-types = { path = "../nexus-types" }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "event_bus"
harness = false
