[package]
name = "nexus-kv"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus KV store backends (SQLite on disk, in-memory for tests) implementing nexus-kernel::KvStore"

[dependencies]
nexus-kernel = { path = "../nexus-kernel" }
rusqlite = { workspace = true }
