[package]
name = "nexus-linkpreview"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus link-preview subsystem: best-effort OG/Twitter-card metadata fetch for canvas link nodes"

[dependencies]
nexus-plugins = { path = "../nexus-plugins" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
