[package]
name = "nexus-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Nexus MCP server (forge ops → AI clients) + Host client (external MCP servers → Nexus)"

[dependencies]
nexus-kernel = { path = "../nexus-kernel" }
nexus-plugins = { path = "../nexus-plugins" }
# BL-023 — `http` for typed HeaderName/HeaderValue parsing on the
# Streamable HTTP transport. The HTTP client itself is provided by
# rmcp's `transport-streamable-http-client-reqwest` feature, which
# depends on its own pinned reqwest version — we deliberately do not
# add a direct reqwest dep here (it would shadow rmcp's, and the two
# would be type-incompatible).
http = "1"
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
