[package]
name = "nexus-memory-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Central sync hub for Nexus memory — a standalone HTTP server that multiple Nexus instances push to and pull from."

[[bin]]
name = "nexus-memory-hub"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
