[package]
name = "nexus-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "AI-native memory layer for Nexus: episodic, semantic, and procedural stores"

[dependencies]
nexus-plugin-api = { path = "../nexus-plugin-api" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
