[package]
name = "nexus-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "AI-native memory layer for Nexus: episodic, semantic, and procedural stores"

[dependencies]
nexus-plugin-api = { path = "../nexus-plugin-api" }
nexus-kernel = { path = "../nexus-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
nexus-plugins = { path = "../nexus-plugins" }
ts-rs = { workspace = true, optional = true, features = ["serde-json-impl"] }
schemars = { workspace = true, optional = true }

[features]
# Emit JSON Schema + TypeScript bindings for the IPC arg types (off by
# default so normal builds don't pull ts-rs / schemars). Mirrors the
# per-service `ts-export` feature used across the workspace.
ts-export = ["dep:ts-rs", "dep:schemars"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
nexus-memory-hub = { path = "../nexus-memory-hub" }
